[package]
name = "super-duper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
blake3 = "1.5.0"
color-eyre = "0.6.2"
indicatif = "0.17.8"
rusqlite = "0.31.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
