[package]
name = "super-duper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
blake3 = "1.5.0"
color-eyre = "0.6.2"
fnv = "1.0.7"
indicatif = "0.17.8"
parking_lot = "0.12.1"
petgraph = "0.6.4"
rayon = "1.9.0"
rusqlite = "0.31.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
